# Developer-portfolio-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260621_0001_create_leads.py  20260621_0002_make_email_nullable.py
app/: __init__.py  main.py
app/api/: contact.py  dependencies.py  health.py  metrics.py
app/core/: config.py  exceptions.py  logger.py  rate_limit.py
app/db/: database.py  models.py
app/providers/: __init__.py  base.py  gemini_provider.py  mock_provider.py
app/repositories/: lead_repository.py
app/schemas/: lead.py
app/services/: ai_service.py  contact_service.py  email_service.py  metrics_service.py
app/static/: app.js  cv.txt  index.html  styles.css
docker/: entrypoint.sh
docs/: project-brief.md
tests/: conftest.py  test_ai_service.py  test_contact.py  test_email_service.py  test_gemini_provider.py  test_health.py  test_metrics.py
