[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "developer-portfolio-api"
version = "0.1.0"
description = "FastAPI developer portfolio API with PostgreSQL, AI classification, email notifications, and a landing page."
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "alembic>=1.16.0",
    "asyncpg>=0.30.0",
    "email-validator>=2.2.0",
    "fastapi>=0.115.0",
    "greenlet>=3.2.0",
    "httpx>=0.28.0",
    "pydantic-settings>=2.9.0",
    "python-dotenv>=1.1.0",
    "slowapi>=0.1.9",
    "SQLAlchemy>=2.0.40",
    "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "aiosqlite>=0.21.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.11.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"
